Can now traverse a matrix